Fixed margin on mobile screen

--- a/_scss/_breadcrumbs.scss
+++ b/_scss/_breadcrumbs.scss
@@ -38,3 +38,13 @@
     }
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .breadcrumb {
+    .breadcrumb-item {
+      &:last-child {
+        display: none;
+      }
+    }
+  }
+}
